@@ -166,6 +166,8 @@ Scotty Allen <scotty@scottyallen.com>
 
 sc_
 
+Robert Sedlacek <phaylon@dunkelheit.at>
+
 =head1 LICENSE
 
 You may distribute this code under the same terms as Perl itself.
