@@ -1,0 +1,8 @@
+#   belongs to t/05components.t
+package DBICTest::ForeignComponent::TestComp;
+use warnings;
+use strict;
+
+sub foreign_test_method { 1 }
+
+1;
