@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - add_components() doesn't prepend base when comp. prefixed with +
         - $schema->deploy
         - HAVING support
         - prefetch for has_many
